--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.1",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "autoprefixer": "^10.4.15",
+    "clsx": "^2.0.0",
     "ethers": "^5",
+    "graphql": "^16.8.0",
     "next": "^13",
+    "postcss": "^8.4.28",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
